--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,2 @@
 
-spring.data.mongodb.uri=mongodb+srv://ness:1234@cluster0.4bfgl.mongodb.net/Perifericos?retryWrites=true&w=majority
-
-#spring.data.mongodb.uri: mongodb://userName:@:27017,icarat-shard-00-01-7lopx.mongodb.net:27017,icarat-shard-00-02-7lopx.mongodb.net:27017/vehicleplatform?ssl=true&replicaSet=icarat-shard-0&authSource=admi
+spring.data.mongodb.uri=mongodb+srv://ness:1234/Perifericos?retryWrites=true&w=majority
