--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 
-spring.data.mongodb.uri=mongodb+srv://ness:1234/Perifericos?retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb+srv://${DB_USER:root}:${DB_PASS:}@${DB_HOST}/${DB_DATABASE}?retryWrites=true&w=majority
